Color change to fix color contrast issues (detected by Axe add-on) #26

--- a/themes/loconomics/assets/css/_theme.scss
+++ b/themes/loconomics/assets/css/_theme.scss
@@ -12,7 +12,7 @@ $logo-color: rgb(0, 122, 124);
 $document-font-size: 18px;
 // A background for a highlighted area, like the SlideshowSection.
 // TODO: Should we replace a Bootstrap semantic color with this? (like info, primary, secondary, success)
-$bg-highlight: rgb(40, 127, 198);
+$bg-highlight: #2574A9;
 
 // Bootstrap variables overrides (before loading any Bootstrap file)
 $font-family-sans-serif: 'Nunito Sans', Arial, Helvetica, sans-serif;
